fixed JS containers sizes for home page on mobile

--- a/BlazorApp2/wwwroot/css/app.css
+++ b/BlazorApp2/wwwroot/css/app.css
@@ -325,6 +325,7 @@ body {
 .swiper-container {
     z-index: 0;
     height: 100%;
+    max-width: 100%;
 }
 
 .swiper-slide {
@@ -347,6 +348,10 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+}
+
+.homePage__section1, .homePage__section2{
+    width: 100%;
 }
 
 /* SEARCH ENGINE COMPONENT DISPLAY */
@@ -735,8 +740,8 @@ body {
         height: 100%;
         display: grid;
         grid-template-columns: 100%;
-        grid-template-rows: 60vh 3vh 60vh;
-        grid-gap: 2rem;
+        grid-template-rows: 50% 1rem 50%;
+        grid-gap: 1rem;
         justify-items: center;
         align-items: center;
         margin-left: 5rem;
@@ -813,7 +818,7 @@ body {
         background: linear-gradient(1deg, hsl(0, 0%, 10%), hsl(0, 0%, 40%), hsl(0, 0%, 10%));
     }
 
-    .latestAnime {
+    .homePage__section1 {
         width: calc(100% - 2rem);
         padding-left: 1rem;
         overflow-x: clip;
@@ -823,6 +828,13 @@ body {
         width: 100%;
     }
 
+    .homePage__section2 {
+        width: calc(100% - 2rem);
+        padding-right: 2rem;
+        overflow-x: clip;
+    }
+
+    
     .upcomingSeason {
         display: grid;
         grid-template-rows: 10vh 20vh auto;
@@ -830,11 +842,6 @@ body {
         align-items: center;
     }
 
-    .homePageContent {
-        width: calc(100% - 2rem);
-        padding-right: 2rem;
-        overflow-x: clip;
-    }
 
     .topMangaList {
         display: flex;
@@ -1024,11 +1031,6 @@ body {
 
     .dropdown.days {
         width: 10rem;
-    }
-
-    .swiper-container {
-        height: 100%;
-        z-index: 0;
     }
 
     .card {
@@ -1290,7 +1292,7 @@ body {
         height: 100%;
         display: grid;
         grid-template-columns: 100%;
-        grid-template-rows: 60vh 3vh 60vh;
+        grid-template-rows: 50% 3vh 50%;
         grid-gap: 1rem;
         justify-items: center;
         align-items: center;
@@ -1299,11 +1301,27 @@ body {
     }
 
     .homePage h3 {
-        padding-bottom: 2rem;
+        padding-bottom: 0rem;
+    }
+
+    .homePage__section2{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 5rem;
     }
 
     .upcomingSeason {
         margin-left: 0;
+    }
+
+    .homePage__section1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
     #divider{
